--- a/CH10_Sorting/CH10_Sorting.vcxproj.filters
+++ b/CH10_Sorting/CH10_Sorting.vcxproj.filters
@@ -36,9 +36,27 @@
     <ClCompile Include="QuickSortMain.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="RadixSortLSDMain.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="LinkedListQueue.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="ListBaseQueue.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="RadixSort.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="my_SimpleHeap.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="LinkedListQueue.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="ListBaseQueue.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
