--- a/CH11_Search1/CH11_Search1.vcxproj
+++ b/CH11_Search1/CH11_Search1.vcxproj
@@ -127,7 +127,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BinarySearch.c" />
+    <ClCompile Include="BinarySearchMain.c" />
+    <ClCompile Include="BinaryTree.c" />
     <ClCompile Include="Interpolation_Search.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="BinaryTree.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
