--- a/CH11_Search1/CH11_Search1.vcxproj.filters
+++ b/CH11_Search1/CH11_Search1.vcxproj.filters
@@ -18,5 +18,19 @@
     <ClCompile Include="Interpolation_Search.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="BinaryTree.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="BinarySearchMain.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="BinarySearch.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="BinaryTree.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
