--- a/CH11_Search1/CH11_Search1.vcxproj
+++ b/CH11_Search1/CH11_Search1.vcxproj
@@ -129,11 +129,14 @@
   <ItemGroup>
     <ClCompile Include="BinarySearch.c" />
     <ClCompile Include="BinarySearchMain.c" />
-    <ClCompile Include="BinaryTree.c" />
-    <ClCompile Include="Interpolation_Search.c" />
+    <ClCompile Include="BinaryTree_2.c" />
+    <ClCompile Include="Interpolation_Search.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="BinaryTree.h" />
+    <ClInclude Include="BinarySearchTree.h" />
+    <ClInclude Include="BinaryTree_2.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
