--- a/CH14_Graph/CH14_Graph.vcxproj
+++ b/CH14_Graph/CH14_Graph.vcxproj
@@ -127,24 +127,23 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="ALGraphBFS.c" />
-    <ClCompile Include="ALGraphDFS.c">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
-    </ClCompile>
-    <ClCompile Include="BFSMain.c" />
-    <ClCompile Include="my_CircularQueueBFS.c" />
+    <ClCompile Include="ALGraphKruskal.c" />
+    <ClCompile Include="KruskalMain.c" />
     <ClCompile Include="DFSMain.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="DLinkedListGraph.c" />
     <ClCompile Include="my_ArrStackDFS.c" />
+    <ClCompile Include="my_SimpleHeapKruskal.c" />
+    <ClCompile Include="PriorityQueueKruskal.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ALGraphBFS.h" />
-    <ClInclude Include="ALGraphDFS.h" />
-    <ClInclude Include="my_CircularQueueBFS.h" />
+    <ClInclude Include="ALEdge.h" />
+    <ClInclude Include="ALGraphKruskal.h" />
     <ClInclude Include="DLinkedListGraph.h" />
     <ClInclude Include="my_ArrStackDFS.h" />
+    <ClInclude Include="my_SimpleHeapKruskal.h" />
+    <ClInclude Include="PriorityQueueKruskal.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
